feat(plugins): enable plugin downloading over http, https, ftp